rust/macros/tests/ui/fail/undefined_role.stderr
error: Choreography parse error:
       Undefined role 'C'
         --> input:3:13
           |
         3 |        A -> C : Ping}
                         ^^

       Macro token input is parsed from original source text.
       Use the canonical indentation-based DSL surface in token form.
 --> tests/ui/fail/undefined_role.rs:3:1
  |
3 | / choreography! {
4 | |     protocol Bad =
5 | |       roles A, B
6 | |       A -> C : Ping
7 | | }
  | |_^
  |
  = note: this error originates in the macro `choreography` (in Nightly builds, run with -Z macro-backtrace for more info)
